<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FF00"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_marks"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_marks_value"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_completed"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/questions_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_completed_value"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF00FF"
        android:padding="24dp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/true_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="#0000FF"
            android:text="@string/false_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:text="@string/hint_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="#0000FF"
            android:text="@string/cheat_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp"
            android:text="@string/prev_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:background="#0000FF"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="4dp"
            android:text="@string/next_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
